sandbox-codebase/objects/Pending_Portal_Requests__c/Pending_Portal_Requests__c.object-meta.xml
<CustomObject>
    <label>Pending Portal Requests</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Portal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>