sandbox-codebase/objects/Pending_Portal_Requests__c/fields/Dead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dead_Reason__c</fullName>
    <label>Dead Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Max retries exceeded</fullName>
            </value>
            <value>
                <fullName>Validation error</fullName>
            </value>
            <value>
                <fullName>Auth failure</fullName>
            </value>
            <value>
                <fullName>Bad payload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>