sandbox-codebase/objects/Pending_Portal_Requests__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>250</length>
    <type>Text</type>
</CustomField>