sandbox-codebase/objects/Pending_Portal_Requests__c/fields/External_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Request_Id__c</fullName>
    <label>External Request Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>