sandbox-codebase/objects/Pending_Portal_Requests__c/fields/Http_Method__c.field-meta.xml
<CustomField>
    <fullName>Http_Method__c</fullName>
    <label>Http Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>