sandbox-codebase/objects/Pending_Portal_Requests__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <label>Idempotency Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>