sandbox-codebase/objects/Pending_Portal_Requests__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <label>Last Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>