sandbox-codebase/objects/Pending_Portal_Requests__c/fields/Last_Response__c.field-meta.xml
<CustomField>
    <fullName>Last_Response__c</fullName>
    <label>Last Response</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>