sandbox-codebase/objects/Pending_Portal_Requests__c/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Max Retries</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>